# r2sbml

./: .Rbuildignore  .gitattributes  .gitignore  DESCRIPTION  NAMESPACE  README.md  cleanup  config.status  configure  configure.ac  configure.win  configure~  r2sbml.Rproj
..Rcheck/: 00install.out
..Rcheck/r2sbml/: DESCRIPTION  INDEX  NAMESPACE
..Rcheck/r2sbml/Meta/: Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds
..Rcheck/r2sbml/R/: r2sbml.rdb  r2sbml.rdx
..Rcheck/r2sbml/examples/: sbmlboundaryconditions.xml  sbmlconversionfactor-alternative.xml  sbmlconversionfactor.xml
..Rcheck/r2sbml/help/: AnIndex  aliases.rds  paths.rds  r2sbml.rdb  r2sbml.rdx
..Rcheck/r2sbml/html/: 00Index.html
..Rcheck/r2sbml/include/common/: libsbml-package.h
..Rcheck/r2sbml/libs/: symbols.rds
.github/workflows/: R-CMD-check.yaml  r.yml
R/: RcppExports.R  zzz.R
inst/examples/: sbmlalgebraicrules.xml  sbmlassignmentrules.xml  sbmldelay.xml  sbmlevent.xml  sbmlfunctiondefinition.xml  sbmlmutlicompartment.xml  sbmlsimple.xml
inst/include/sbml/common/: libsbml-version.h
inst/include/sbml/extension/: RegisterExtensions.h
man/: convertReactions.Rd  echoSBML.Rd  getCmtNames.Rd  getCmtSizes.Rd  getEventMath.Rd  getFunctionDefinition.Rd  getModel.Rd  getNumSpecies.Rd  getParameterTable.Rd  getReactionMath.Rd  getReactionTable.Rd  getRuleMath.Rd  getSpeciesIC.Rd  getSpeciesNames.Rd  getSpeciesTable.Rd  printSBML.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  compartmentInfo.cpp  convertReactions.cpp  echoSBML.cpp  getMath.cpp  getModel.cpp  getSpeciesNum.cpp  paramInfo.cpp  printSBML.cpp  rcpp_hello.cpp  reactionInfo.cpp  speciesInfo.cpp  symbols.rds
src/libsbml-install/include/sbml/: SBMLError.h  SBMLErrorTable.h
src/libsbml-install/include/sbml/common/: libsbml-config-common.h  libsbml-namespace.h  libsbml-package.h  libsbml-version.h
src/libsbml-install/include/sbml/compress/: crypt.h
src/libsbml-install/include/sbml/conversion/: ExpressionAnalyser.h  SBMLRateRuleConverter.h
src/libsbml-install/include/sbml/math/: ASTNode.h
src/libsbml-install/lib/cmake/: sbml-static-config-version.cmake  sbml-static-config.cmake  sbml-static-targets-release.cmake  sbml-static-targets.cmake
src/libsbml-install/lib/pkgconfig/: libsbml.pc
src/libsbml-install/share/libsbml/: NEWS.txt  README.md
src/scripts/: libsbml_cleanup.sh  libsbml_download.sh  r_config.sh
tools/: cmake_call.sh  winlibs.R
